--- a/Client/Common.props
+++ b/Client/Common.props
@@ -33,7 +33,8 @@
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
         <PackageReference Include="Uno.WinUI" Version="4.0.13" />
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
-        <PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />
+        <!-- Com.Airbnb.iOS.Lottie暂不支持ios15.2 -->
+        <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />-->
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
@@ -51,10 +52,7 @@
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.1" />
         <!-- 升级.net6后需要引用 -->
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.0.4" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
-        <PackageReference Include="GMImagePicker.Xamarin" Version="2.5.1" />
+        <PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
