--- a/Client/Common.props
+++ b/Client/Common.props
@@ -31,7 +31,7 @@
     </ItemGroup>
 
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Uno.WinUI" Version="4.0.13" />
+        <PackageReference Include="Uno.WinUI" Version="4.2.0-dev.100" />
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
         <!-- Com.Airbnb.iOS.Lottie暂不支持ios15.2 -->
         <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />-->
@@ -40,17 +40,15 @@
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
+        <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
 	</ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('-android'))">
-        <PackageReference Include="Square.OkHttp3" Version="4.9.2" />
-        <PackageReference Include="Square.OkIO" version="2.10.0" />
-        <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.4.0.1" />
-        <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.3" />
-        <!-- 因WorkManager后台任务添加的引用 -->
-        <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.1" />
-        <PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />
+        <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
+        <!-- WorkManager后台任务引用 -->
+        <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.2" />
+        <PackageReference Include="Uno.WinUI.Lottie" Version="4.2.0-dev.100" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
