--- a/Client/Common.props
+++ b/Client/Common.props
@@ -51,6 +51,11 @@
         <PackageReference Include="Uno.WinUI.Lottie" Version="4.2.0-dev.100" />
     </ItemGroup>
 
+    <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
+        <!-- 旧版包SQLite无法初始化 -->
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0-pre20220207221914" />
+    </ItemGroup>
+    
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.0.13" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.7" />
