--- a/Client/Common.props
+++ b/Client/Common.props
@@ -1,35 +1,42 @@
 <Project ToolsVersion="Current">
     <!-- 所有项目都需Import -->
-	<PropertyGroup>
-		<SingleProject>true</SingleProject>
-		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
+    <PropertyGroup>
+        <SingleProject>true</SingleProject>
+        <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
         <ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
+    </PropertyGroup>
 
-	<!-- 定义平台常量 -->
-	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<DefineConstants>$(DefineConstants);WIN</DefineConstants>
-	</PropertyGroup>
+    <!-- 定义平台常量 -->
+    <PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
+        <DefineConstants>$(DefineConstants);WIN</DefineConstants>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
-		<DefineConstants>$(DefineConstants);IOS</DefineConstants>
-	</PropertyGroup>
+    <PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
+        <DefineConstants>$(DefineConstants);IOS</DefineConstants>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="$(TargetFramework.Contains('-android'))">
-		<DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
-	</PropertyGroup>
+    <PropertyGroup Condition="$(TargetFramework.Contains('-android'))">
+        <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<DefineConstants>$(DefineConstants);WASM</DefineConstants>
-	</PropertyGroup>
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+        <DefineConstants>$(DefineConstants);WASM</DefineConstants>
+    </PropertyGroup>
 
-    <!-- 引用包 -->
+    <!-- 公共引用包 -->
     <ItemGroup>
         <PackageReference Include="Dt.Cells" Version="2.2.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
         <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+        <PackageReference Include="Serilog" Version="2.10.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+        <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     </ItemGroup>
 
+    <!-- 非windows引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
         <PackageReference Include="Uno.WinUI" Version="4.2.0-dev.117" />
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
@@ -37,13 +44,20 @@
         <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />-->
     </ItemGroup>
 
+    <!-- android iOS引用包 -->
+    <ItemGroup Condition="$(TargetFramework.Contains('-android')) or $(TargetFramework.Contains('-ios'))">
+        <PackageReference Include="Serilog.Sinks.Xamarin" Version="0.2.0.64" />
+    </ItemGroup>
+
+    <!-- windows引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
-	</ItemGroup>
+    </ItemGroup>
 
+    <!-- android引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-android'))">
         <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
         <!-- WorkManager后台任务引用 -->
@@ -51,11 +65,13 @@
         <PackageReference Include="Uno.WinUI.Lottie" Version="4.2.0-dev.117" />
     </ItemGroup>
 
+    <!-- iOS引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
         <!-- 旧版包SQLite无法初始化 -->
         <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0-pre20220207221914" />
     </ItemGroup>
-    
+
+    <!-- wasm引用包 -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.0.13" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.7" />
@@ -64,6 +80,7 @@
     <ItemGroup>
         <Using Include="Dt.Core" />
         <Using Include="Dt.Agent" />
+        <Using Include="Serilog" />
     </ItemGroup>
 
     <!-- 确保各平台的GlobalUsing相同，不然造成歧义 -->
@@ -78,7 +95,7 @@
         <Using Remove="Foundation" />
         <Using Remove="UIKit" />
     </ItemGroup>
-    
+
     <!-- WindowsAppSDK已内置，uno需要，否则xaml文件无法编译 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
         <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
