--- a/Client/Common.props
+++ b/Client/Common.props
@@ -29,9 +29,6 @@
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
         <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
-        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
-        <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     </ItemGroup>
@@ -42,11 +39,6 @@
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
         <!-- Com.Airbnb.iOS.Lottie暂不支持ios15.2 -->
         <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />-->
-    </ItemGroup>
-
-    <!-- android iOS引用包 -->
-    <ItemGroup Condition="$(TargetFramework.Contains('-android')) or $(TargetFramework.Contains('-ios'))">
-        <PackageReference Include="Serilog.Sinks.Xamarin" Version="0.2.0.64" />
     </ItemGroup>
 
     <!-- windows引用包 -->
@@ -73,7 +65,7 @@
 
     <!-- wasm引用包 -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.0.13" />
+        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.2.0-dev.117" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.7" />
     </ItemGroup>
 
