--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -52,9 +52,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dt.Cells" Version="2.2.0" />
         <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.0.13" />
+        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.2.0-dev.117" />
         <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
         <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" PrivateAssets="all" />
         <!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
