--- a/Client/Common.props
+++ b/Client/Common.props
@@ -4,6 +4,7 @@
         <SingleProject>true</SingleProject>
         <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UseMauiEssentials>true</UseMauiEssentials>
     </PropertyGroup>
 
     <!-- 定义平台常量 -->
@@ -27,7 +28,6 @@
     <ItemGroup>
         <PackageReference Include="Dt.Cells" Version="2.2.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
-        <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
@@ -35,10 +35,10 @@
 
     <!-- 非windows引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Uno.WinUI" Version="4.2.0-dev.117" />
+        <PackageReference Include="Uno.WinUI" Version="4.1.8" />
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
         <!-- Com.Airbnb.iOS.Lottie暂不支持ios15.2 -->
-        <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />-->
+        <!--<PackageReference Include="Uno.WinUI.Lottie" Version="4.1.8" />-->
     </ItemGroup>
 
     <!-- windows引用包 -->
@@ -54,7 +54,7 @@
         <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
         <!-- WorkManager后台任务引用 -->
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.2" />
-        <PackageReference Include="Uno.WinUI.Lottie" Version="4.2.0-dev.117" />
+        <PackageReference Include="Uno.WinUI.Lottie" Version="4.1.8" />
     </ItemGroup>
 
     <!-- iOS引用包 -->
@@ -65,7 +65,7 @@
 
     <!-- wasm引用包 -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.2.0-dev.117" />
+        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.1.8" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.7" />
     </ItemGroup>
 
