--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -10,6 +10,7 @@
         <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
         <UseWinUI>true</UseWinUI>
         <EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
+        <DefaultLanguage>zh-CN</DefaultLanguage>
     </PropertyGroup>
 
     <Import Project="..\Common.props" />
