--- a/Client-Stable/GMImagePicker/GMImagePicker.csproj
+++ b/Client-Stable/GMImagePicker/GMImagePicker.csproj
@@ -4,11 +4,17 @@
     <SingleProject>true</SingleProject>
   </PropertyGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\GMEmptyFolder%402x.png" />
-    <BundleResource Include="Resources\GMSelected.png" />
-    <BundleResource Include="Resources\GMSelected%402x.png" />
-    <BundleResource Include="Resources\GMVideoIcon.png" />
-    <BundleResource Include="Resources\GMVideoIcon%402x.png" />
+    <None Remove="Resources\GMEmptyFolder%402x.png" />
+    <None Remove="Resources\GMEmptyFolder%403x.png" />
+    <None Remove="Resources\GMEmptyFolder.png" />
+    <None Remove="Resources\GMSelected%402x.png" />
+    <None Remove="Resources\GMSelected%403x.png" />
+    <None Remove="Resources\GMSelected.png" />
+    <None Remove="Resources\GMVideoIcon%402x.png" />
+    <None Remove="Resources\GMVideoIcon%403x.png" />
+    <None Remove="Resources\GMVideoIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
     <BundleResource Include="Base.lproj\GMImagePicker.strings" />
     <BundleResource Include="ca.lproj\GMImagePicker.strings" />
     <BundleResource Include="de.lproj\GMImagePicker.strings" />
