--- a/Client-Stable/Dt.Stable.Droid/Dt.Stable.Droid.csproj
+++ b/Client-Stable/Dt.Stable.Droid/Dt.Stable.Droid.csproj
@@ -5,6 +5,7 @@
         <OutputType>Exe</OutputType>
         <UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>
         <IsUnoHead>true</IsUnoHead>
+        <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
@@ -29,4 +30,5 @@
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
         <UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
     </ItemGroup>
+    <Import Project="..\Dt.Stable.Shared\Dt.Stable.Shared.projitems" Label="Shared" />
 </Project>
