--- a/Client/Common.props
+++ b/Client/Common.props
@@ -4,7 +4,7 @@
         <SingleProject>true</SingleProject>
         <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
         <ImplicitUsings>enable</ImplicitUsings>
-        <!-- wasm不支持Essentials -->
+        <!-- wasm不支持Essentials, android编译产生缺androidx.window.extensions.jar androidx.window.sidecar.jar警告 -->
         <UseMauiEssentials Condition="'$(TargetFramework)' != 'net6.0'">true</UseMauiEssentials>
     </PropertyGroup>
 
