--- a/Client/Common.props
+++ b/Client/Common.props
@@ -39,6 +39,10 @@
         <PackageReference Include="Uno.WinUI" Version="4.2.6" />
         <!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
         <PackageReference Include="Uno.WinUI.Lottie" Version="4.2.6" />
+        <!-- uno日志 -->
+        <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.2.6" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     </ItemGroup>
 
     <!-- windows引用包 -->
