Agent项目合并到Dt.Base

--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -6,7 +6,10 @@
 
     <Import Project="..\Targets.props" />
     <Import Project="..\Common.props" />
-    <Import Project="..\Agent.props" />
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+    </ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' != 'net6.0'">
         <None Include="Chat\WebRTC\VideoCaller.xaml" />
