--- a/Client/Dt.Mgr/Dt.Mgr.csproj
+++ b/Client/Dt.Mgr/Dt.Mgr.csproj
@@ -9,8 +9,7 @@
     <Import Project="..\Targets.props" />
     <Import Project="..\Common.props" />
     <Import Project="..\Package.props" />
-    <Import Project="..\Agent.props" />
-    
+
 	<!-- 包图标 -->
 	<ItemGroup>
 		<None Include="..\..\logo.png">
@@ -20,6 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+        <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Base\Dt.Base.csproj" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
