--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -14,9 +14,9 @@
     </PropertyGroup>
 
     <Import Project="..\Common.props" />
-    <Import Project="..\Agent.props" />
 
     <ItemGroup>
+        <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
         <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
         <ProjectReference Include="..\Dt.Mgr\Dt.Mgr.csproj" />
         <ProjectReference Include="..\Dt.Sample\Dt.Sample.csproj" />
