--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -22,8 +22,8 @@
     </ItemGroup>
     
     <ItemGroup>
-        <Page Include="..\Dt.Sample\App\App.xaml" Link="App.xaml" />
-        <Compile Include="..\Dt.Sample\App\App.xaml.cs" Link="App.xaml.cs">
+        <Page Include="..\Dt.Shell.Win\App.xaml" Link="App.xaml" />
+        <Compile Include="..\Dt.Shell.Win\App.xaml.cs" Link="App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
         </Compile>
     </ItemGroup>
