--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -40,8 +40,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Page Include="..\Dt.Sample\App\App.xaml" Link="App.xaml" />
-        <Compile Include="..\Dt.Sample\App\App.xaml.cs" Link="App.xaml.cs">
+        <Page Include="..\Dt.Shell.Win\App.xaml" Link="App.xaml" />
+        <Compile Include="..\Dt.Shell.Win\App.xaml.cs" Link="App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
         </Compile>
     </ItemGroup>
