--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -25,8 +25,8 @@
         <BundleResource Include="iOS\Resources\SplashScreen%402x.png" />
         <BundleResource Include="iOS\Resources\SplashScreen%403x.png" />
         <BundleResource Include="iOS\Resources\logo.png" />
-        <BundleResource Include="..\..\Common\Fonts\icon.ttf" Link="iOS\Resources\Fonts\icon.ttf" />
-        <BundleResource Include="..\..\Common\Fonts\uno-fluentui-assets.ttf" Link="iOS\Resources\Fonts\uno-fluentui-assets.ttf" />
+        <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="iOS\Resources\Fonts\icon.ttf" />
+        <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="iOS\Resources\Fonts\uno-fluentui-assets.ttf" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%403x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-120.png" />
