--- a/Client/Common.props
+++ b/Client/Common.props
@@ -26,7 +26,7 @@
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Cells" Version="2.2.0" />
+        <PackageReference Include="Dt.Infra" Version="2.0.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
