--- a/Client/Common.props
+++ b/Client/Common.props
@@ -27,7 +27,9 @@
     <!-- 公共引用包 -->
     <ItemGroup>
         <PackageReference Include="Dt.Infra" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.5" />
+        <!-- 2.1.0后支持.net6 maui，旧版iOS中无法初始化 -->
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
@@ -62,15 +64,13 @@
     <!-- iOS引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
         <PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-        <!-- 旧版包SQLite无法初始化 -->
-        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0-pre20220207221914" />
     </ItemGroup>
 
     <!-- wasm引用包 -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.3.6" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.7" />
+        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
