--- a/Client/Common.props
+++ b/Client/Common.props
@@ -28,7 +28,7 @@
     <ItemGroup>
         <PackageReference Include="Dt.Infra" Version="2.0.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.5" />
-        <!-- 2.1.0后支持.net6 maui，旧版iOS中无法初始化 -->
+        <!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
         <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
