--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -3,10 +3,23 @@
         <TargetFramework>net6.0-ios</TargetFramework>
         <SingleProject>true</SingleProject>
         <OutputType>Exe</OutputType>
-        <RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
-        <!-- Disabled because of https://github.com/dotnet/runtime/issues/68808 -->
-        <!--<UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>-->
         <IsUnoHead>true</IsUnoHead>
+    
+        <!--发布用，和Info.plist中的CFBundleIdentifier CFBundleVersion一致-->
+        <ApplicationId>com.dt.samples</ApplicationId>
+        <ApplicationVersion>22.6.10</ApplicationVersion>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+        <RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
+        <CodesignKey>iPhone Distribution</CodesignKey>
+        <CodesignProvision>dt.samples</CodesignProvision>
+        <ArchiveOnBuild>true</ArchiveOnBuild>
+        <TcpPort>58181</TcpPort>
+        <ServerAddress>10.10.1.7</ServerAddress>
+        <ServerUser>1234</ServerUser>
+        <ServerPassword>1</ServerPassword>
+        <_DotNetRootRemoteDirectory>/Users/a1234/Library/Caches/Xamarin/XMA/SDKs/dotnet/</_DotNetRootRemoteDirectory>
     </PropertyGroup>
 
     <Import Project="..\Common.props" />
