--- a/Client/Targets.props
+++ b/Client/Targets.props
@@ -1,10 +1,14 @@
 <Project ToolsVersion="Current">
     <!-- 库项目需Import -->
 	<PropertyGroup>
-		<TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-All.sln'">net6.0-windows10.0.19041;net6.0;net6.0-android;net6.0-ios</TargetFrameworks>
-        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Win.sln'">net6.0-windows10.0.19041</TargetFrameworks>
-        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Droid.sln'">net6.0-windows10.0.19041;net6.0-android</TargetFrameworks>
-        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-IOS.sln'">net6.0-windows10.0.19041;net6.0-ios</TargetFrameworks>
-        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Wasm.sln'">net6.0-windows10.0.19041;net6.0</TargetFrameworks>
+        <!-- 默认目标框架 -->
+		<TargetFrameworks>net6.0;net6.0-android;net6.0-ios</TargetFrameworks>
+        <!-- 覆盖默认 -->
+        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Droid.sln'">net6.0-android</TargetFrameworks>
+        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-IOS.sln'">net6.0-ios</TargetFrameworks>
+        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Wasm.sln'">net6.0</TargetFrameworks>
+        <TargetFrameworks Condition="'$(SolutionFileName)' == 'Client-Win.sln'"></TargetFrameworks>
+        <!-- 始终包含windows目标 -->
+        <TargetFrameworks>$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>
 	</PropertyGroup>
 </Project>
