--- a/Tools/DtTemplates/PrjTemplate/Client/Common.props
+++ b/Tools/DtTemplates/PrjTemplate/Client/Common.props
@@ -1,8 +1,8 @@
 <Project ToolsVersion="Current">
 	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<SingleProject>true</SingleProject>
 		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseMauiEssentials Condition="'$(TargetFramework)' != 'net6.0'">true</UseMauiEssentials>
 	</PropertyGroup>
 
 	<!-- 定义平台常量 -->
@@ -25,48 +25,59 @@
     <!-- 引用包 -->
     <ItemGroup>
 		<PackageReference Include="Dt.Client" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.12" />
-        <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.5" />
+		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
+		<PackageReference Include="Serilog" Version="2.10.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     </ItemGroup>
+	<!-- 非windows引用包 -->
+	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
+		<PackageReference Include="Uno.WinUI" Version="4.3.6" />
+		<!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.3.6" />
+		<!-- uno日志 -->
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.6" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+	</ItemGroup>
 
-    <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Uno.WinUI" Version="4.0.13" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.0.13" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
+	<!-- windows引用包 -->
+	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.3" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
+		<!-- Toast参数启动引用 -->
 		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
 	</ItemGroup>
 
+	<!-- android引用包 -->
 	<ItemGroup Condition="$(TargetFramework.Contains('-android'))">
-		<PackageReference Include="Square.OkHttp3" Version="4.9.2" />
-		<PackageReference Include="Square.OkIO" version="2.10.0" />
-		<PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.4.0.1" />
-		<PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.3" />
-		<!-- 因WorkManager后台任务添加的引用 -->
-		<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.1" />
-		<!-- 升级.net6后需要引用 -->
-		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.0.4" />
+		<PackageReference Include="Square.OkHttp3" Version="4.9.2.3" />
+		<!-- WorkManager后台任务引用 -->
+		<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.3" />
 	</ItemGroup>
 
-    <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
-        <PackageReference Include="GMImagePicker.Xamarin" Version="2.5.1" />
-    </ItemGroup>
+	<!-- iOS引用包 -->
+	<ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
+		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
+	</ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.0.13" />
-        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.0.4" />
-    </ItemGroup>
+	<!-- wasm引用包 -->
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.3.6" />
+		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
+		<PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<Using Include="Dt.Core" />
 		<Using Include="Dt.Base" />
-		<Using Include="Dt.App" />
+		<Using Include="Dt.Mgr" />
 		<Using Include="Dt.Agent" />
 		<Using Include="Dt.Core.Model" />
 		<Using Include="System" />
+		<Using Include="Serilog" />
 	</ItemGroup>
 
 	<!-- 确保各平台的GlobalUsing相同，不然造成歧义 -->
