--- a/Client/Common.props
+++ b/Client/Common.props
@@ -52,6 +52,10 @@
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
+        <!-- Lottie动画 -->
+        <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.1-preview.71" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.1-preview.71" />
+        <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.71" />
     </ItemGroup>
 
     <!-- android引用包 -->
@@ -71,6 +75,10 @@
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.4.5" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
+        <!-- Lottie动画 -->
+        <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.71" />
+        <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.1-preview.71" />
+        <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.71" />
     </ItemGroup>
 
     <ItemGroup>
