--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -6,7 +6,7 @@
         <NoWarn>NU1701</NoWarn>
 
         <!-- 必须sdk完整路径 -->
-        <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-bd114dd-53ca85fb900-1877706367-Sqlite.zip</NetCoreWasmSDKUri>
+        <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-bd114dd-53ca85fb900-1877706367-Release.zip</NetCoreWasmSDKUri>
 
         <!-- 默认Interpreter -->
         <!--<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>-->
@@ -53,10 +53,11 @@
 
     <ItemGroup>
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.4.5" />
-        <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
-        <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" PrivateAssets="all" />
+        <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
+        <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" PrivateAssets="all" />
         <!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
-        <!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />-->
+        <PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />
+        <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.1-preview.71" />
     </ItemGroup>
 
     <ItemGroup>
