--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\icon.ttf" Link="Android\Assets\Fonts\icon.ttf" />
         <AndroidAsset Include="..\Dt.Shell.Win\Assets\Fonts\uno-fluentui-assets.ttf" Link="Android\Assets\Fonts\uno-fluentui-assets.ttf" />
+        <AndroidAsset Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="Android\Assets\Assets\Lottie\%(Filename).json" />
     </ItemGroup>
     
     <ItemGroup>
