--- a/Service/src/Boot/Properties/launchSettings.json
+++ b/Service/src/Boot/Properties/launchSettings.json
@@ -2,9 +2,9 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:32176",
-      "sslPort": 44347
+    "iis": {
+      "applicationUrl": "http://localhost/dt",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -12,17 +12,14 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7144;http://localhost:5144",
+      "applicationUrl": "https://localhost:2022",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "IIS": {
+      "commandName": "IIS",
+      "launchBrowser": true
     }
   }
 }
