--- a/Tools/WasmTools/Dt.WasmTools.csproj
+++ b/Tools/WasmTools/Dt.WasmTools.csproj
@@ -4,9 +4,11 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
 		<NoWarn>NU5128</NoWarn>
+		<!-- 打包时dll放在tools目录 -->
 		<IsTool>true</IsTool>
 		<!-- 打包时包含pdb文件，用于调试 -->
-		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+		<AllowedOutputExtensionsInPackageBuildOutputFolder Condition="'$(Configuration)'=='Debug'">$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+		<GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<!-- 包公共属性 -->
