--- a/Client/Common.props
+++ b/Client/Common.props
@@ -26,7 +26,7 @@
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Infra" Version="2.0.0" />
+        <PackageReference Include="Dt.Infras" Version="2.0.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
         <!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
         <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
