--- a/Tools/DtTemplates/PrjTemplate/Client/Common.props
+++ b/Tools/DtTemplates/PrjTemplate/Client/Common.props
@@ -25,37 +25,38 @@
     <!-- 引用包 -->
     <ItemGroup>
 		<PackageReference Include="Dt.Client" Version="2.0.0" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.5" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化 -->
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
-		<PackageReference Include="Serilog" Version="2.10.0" />
+		<PackageReference Include="Serilog" Version="2.11.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     </ItemGroup>
 	<!-- 非windows引用包 -->
 	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Uno.WinUI" Version="4.3.6" />
+		<PackageReference Include="Uno.WinUI" Version="4.4.13" />
 		<!-- 对应Microsoft.Toolkit.Uwp.UI.Lottie库，渲染 Adobe AfterEffects 格式动画，提供60fps矢量图形动画 -->
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.3.6" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.4.13" />
 		<!-- uno日志 -->
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.6" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
 	</ItemGroup>
 
 	<!-- windows引用包 -->
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.3" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<!-- Toast参数启动引用 -->
 		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
 	</ItemGroup>
 
 	<!-- android引用包 -->
 	<ItemGroup Condition="$(TargetFramework.Contains('-android'))">
-		<PackageReference Include="Square.OkHttp3" Version="4.9.2.3" />
+		<PackageReference Include="Square.OkHttp3" Version="4.9.3.1" />
 		<!-- WorkManager后台任务引用 -->
-		<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.3" />
+		<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.4" />
 	</ItemGroup>
 
 	<!-- iOS引用包 -->
@@ -65,8 +66,8 @@
 
 	<!-- wasm引用包 -->
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.3.6" />
-		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.4.13" />
+		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 		<PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
 	</ItemGroup>
 
@@ -92,15 +93,13 @@
 		<Using Remove="Foundation" />
 		<Using Remove="UIKit" />
 	</ItemGroup>
-	
+
 	<!-- WindowsAppSDK已内置，uno需要，否则xaml文件无法编译 -->
-    <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-        <Compile Update="**\*.xaml.cs">
-            <DependentUpon>%(Filename)</DependentUpon>
-        </Compile>
-    </ItemGroup>
-    <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-    </ItemGroup>
+	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
+		<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+		<Compile Update="**\*.xaml.cs">
+			<DependentUpon>%(Filename)</DependentUpon>
+		</Compile>
+		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+	</ItemGroup>
 </Project>
