--- a/Infras/Common.props
+++ b/Infras/Common.props
@@ -1,6 +1,7 @@
 <Project ToolsVersion="Current">
     <PropertyGroup>
         <TargetFrameworks>net6.0-windows10.0.19041;net6.0;net6.0-android;net6.0-ios</TargetFrameworks>
+        <TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
         <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
     </PropertyGroup>
 
