--- a/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-windows10.0.19041;net6.0-android;net6.0-ios</TargetFrameworks>
+		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
+		<RootNamespace>$ext_safeprojectname$</RootNamespace>
 	</PropertyGroup>
 
-	<Import Project="Common.props" />
-
-	<ItemGroup>
-		<None Remove="Common.props" />
-	</ItemGroup>
+	<Import Project="Stub\Common.props" />
 </Project>
