--- a/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<RootNamespace>$ext_safeprojectname$</RootNamespace>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
