--- a/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
+++ b/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
@@ -6,7 +6,7 @@
 		<IsUnoHead>true</IsUnoHead>
 	</PropertyGroup>
 
-	<Import Project="..\$ext_safeprojectname$.Client\Common.props" />
+	<Import Project="..\$ext_safeprojectname$.Client\Stub\Common.props" />
 
 	<ItemGroup>
 		<ProjectReference Include="..\$ext_safeprojectname$.Client\$ext_safeprojectname$.Client.csproj" />
