--- a/Service/src/Common.props
+++ b/Service/src/Common.props
@@ -3,16 +3,13 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<NoWarn>1701;1702;1705;1591</NoWarn>
 		<DefineConstants>$(DefineConstants);TRACE;SERVER</DefineConstants>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<NoWarn>1701;1702;1705;1591</NoWarn>
-		<DefineConstants>$(DefineConstants);TRACE;SERVER</DefineConstants>
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<!-- release不输出pbd调试信息 -->
+		<DebugType>none</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
