--- a/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>$ext_safeprojectname$</RootNamespace>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
