AppStub自动生成的存根代码，基础部分放入内部存根

--- a/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
+++ b/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
@@ -93,7 +93,9 @@
     <None Include="Client\Stub\ReceiveShare.cs" />
     <None Include="Client\Agent\AtSvc.cs" />
     <None Include="Client\Agent\AtLocal.cs" />
-    <None Include="Client\Stub\TestTable.cs" />
+    <None Include="Client\Stub\FixedMenus.cs" />
+    <None Include="Client\Stub\LocalDict.cs" />
+    <None Include="Client\Stub\PushApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
